--- a/src/app/pages/auth/sign-in/sign-in.page.html
+++ b/src/app/pages/auth/sign-in/sign-in.page.html
@@ -1,35 +1,28 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>{{titulo}}</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">{{titulo}}</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <div class="container">
+  <div id="container">
     <ion-card>
       <ion-card-header>
-        <ion-card-title>Awesome Title</ion-card-title>
+        <ion-card-title>Iniciar sesión</ion-card-title>
         <ion-card-subtitle>Iniciar sesión</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
-        <ion-item class="ion-margin-vertical">
-          <ion-input type="text" labelPlacement="floating" [(ngModel)]="correo">
-            <div slot="label">Correo electrónico</div>
-          </ion-input>
-        </ion-item>
-        <ion-item class="ion-margin-vertical">
-          <ion-input type="password" labelPlacement="floating" [(ngModel)]="contrasena">
-            <div slot="label">Contrasena</div>
-          </ion-input>
-        </ion-item>
-        <ion-button (click)="iniciarSesion()" expand="block" >
-          Iniciar sesión
-        </ion-button>
+        <form [formGroup]="sesionForm" novalidate>
+          <ion-item class="ion-margin-vertical">
+            <ion-input type="text" labelPlacement="floating" formControlName="correo" required>
+              <div slot="label">Correo electrónico</div>
+            </ion-input>
+          </ion-item>
+          <ion-item class="ion-margin-vertical">
+            <ion-input type="password" labelPlacement="floating" formControlName="contrasena" required>
+              <div slot="label">Contrasena</div>
+            </ion-input>
+          </ion-item>
+          <ion-button (click)="iniciarSesion()" expand="block" class="ion-margin-vertical" [disable]="deshabilitarBoton">
+            Iniciar sesión
+          </ion-button>
+          <ion-note>Olvidé mi <a (click)="recuperarContrasena()"><strong>contraseña</strong></a>.</ion-note>
+        </form>
+        <!--  -->
       </ion-card-content>
     </ion-card>
   </div>
