Retoques en home, sign-in; creación paginas incidentes, reset, servicio de acciones.

--- a/src/app/pages/start/main-start/main-start.page.html
+++ b/src/app/pages/start/main-start/main-start.page.html
@@ -4,49 +4,35 @@
       <ion-title>Menu</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-content class="ion-padding" >
-    
-      <ion-item [lines]="false">
-        <ion-button expand="block" fill="clear" shape="round">
-          <ion-icon name="warning-outline"></ion-icon>
-          Incidencias
-        </ion-button>
-      </ion-item>
-      <ion-item [lines]="false">
-        <ion-button  expand="block" fill="clear" shape="round">
-          <ion-icon name="pie-chart-outline"></ion-icon>
-          Reportes
-        </ion-button>
-      </ion-item>
-      
-      <div style="position: absolute; bottom: 10px;">
-      <ion-item [lines]="false">
-        <ion-button class="ion-align-items-end" expand="block" fill="clear" shape="round">
-          <ion-icon name="people-outline"></ion-icon>
-          Usuarios
-        </ion-button>
-      </ion-item>
-      <ion-item [lines]="false">
-        <ion-button class="ion-align-items-end" expand="full" fill="clear" shape="round">
-          <ion-icon name="settings-outline"></ion-icon>
-          Configuración
-        </ion-button>
-      </ion-item>
-      <ion-item [lines]="false">
-        <ion-button class="ion-align-items-end" expand="block" fill="clear" shape="round">
-          <ion-icon name="power-outline"></ion-icon>
-          Cerrar sesión
-        </ion-button>
-      </ion-item></div>
-      
+  <ion-content class="ion-padding-vertical" >
+    <ion-button expand="full" fill="solid" (click)="irIncidencias()">
+      <ion-icon name="warning-outline"></ion-icon>
+      Incidencias
+    </ion-button>
+    <ion-button  expand="full" fill="solid" (click)="irReportes()">
+      <ion-icon name="pie-chart-outline"></ion-icon>
+      Reportes
+    </ion-button>
+    <ion-button class="ion-align-items-end" expand="full" fill="solid" (click)="irUsuarios()">
+      <ion-icon name="people-outline"></ion-icon>
+      Usuarios
+    </ion-button>
+    <div style="position: absolute; bottom: 10px; width: 100%;">
+      <ion-button class="ion-align-items-end" expand="full" fill="solid">
+        <ion-icon name="settings-outline"></ion-icon>
+        Configuración
+      </ion-button>
+      <ion-button class="ion-align-items-end" expand="full" fill="solid" (click)="cerrarSesion()">
+        <ion-icon name="power-outline"></ion-icon>
+        Cerrar sesión
+      </ion-button>
+    </div>
   </ion-content>
 </ion-menu>
 <div class="ion-page" id="main-content">
   <ion-header>
     <ion-toolbar>
       <ion-title class="ion-align-items-center">
-        <!-- <img height="24px" style="margin-top: 10px;" src="../../../../assets/images/logo.png" alt="Logo"> -->
-        <!-- <ion-icon style="padding-top: 5px;" color="warning" name="warning-outline"></ion-icon> -->
         <span>¡Hola {{nombre}}!</span></ion-title>
       <ion-buttons slot="end">
         <ion-menu-button></ion-menu-button>
