--- a/src/app/pages/incidences/incidents-form/incidents-form.page.html
+++ b/src/app/pages/incidences/incidents-form/incidents-form.page.html
@@ -1,13 +1,102 @@
-<ion-header [translucent]="true">
+<!-- <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>incidents-form</ion-title>
+    <ion-title>{{titulo}} incidencia</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="false">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">incidents-form</ion-title>
+      <ion-title size="large">{{titulo}} incidencia</ion-title>
     </ion-toolbar>
   </ion-header>
+  <div style="top: 0px; right: 0px; bottom: 0px; left: 0px;">
+    <form [formGroup]="formulario" novalidate>
+       <ion-item class="ion-margin">
+        <ion-input type="text" labelPlacement="floating" formControlName="asunto" required>
+          <div slot="label">Asunto</div>
+        </ion-input>
+      </ion-item>
+      <ion-item class="ion-margin">
+        <ion-textarea labelPlacement="floating" formControlName="descripcion" required>
+          <div slot="label">Descripción</div>
+        </ion-textarea>
+      </ion-item>
+      <ion-item class="ion-margin">
+        <ion-datetime display-format="DD.MM.YYYY HH:mm" formControlName="fecha">
+          <div slot="label">Fecha</div>
+        </ion-datetime>
+      </ion-item>
+      <ion-item class="ion-margin">
+        <ion-textarea labelPlacement="floating" formControlName="impacto" required>
+          <div slot="label">Impacto</div>
+        </ion-textarea>
+      </ion-item>
+      <ion-item class="ion-margin">
+        <ion-textarea labelPlacement="floating" formControlName="riesgos" required>
+          <div slot="label">Riesgos</div>
+        </ion-textarea>
+      </ion-item>
+      <ion-item class="ion-margin">
+        <ion-select value="" multiple="false" interface="popover">
+          <div slot="label">Prioridad</div>
+          <ion-select-option *ngFor="let prioridades of listaPrioridades" value="{{prioridades.id}}">{{prioridades.prioridad}}</ion-select-option>
+        </ion-select>
+      </ion-item>
+      <ion-button expand="block"  [disabled]="!formulario.valid" class="ion-margin-horizontal">
+        Guardar
+      </ion-button>
+      <ion-button color="secondary" expand="block" class="ion-margin">
+        Cancelar
+      </ion-button>
+    </form>
+  </div>
+</ion-content> -->
+
+<ion-content [fullscreen]="true">
+<ion-header>
+  <ion-toolbar>
+    <ion-title>{{titulo}} incidencia</ion-title>
+  </ion-toolbar>
+</ion-header>
+<div>
+  <form [formGroup]="formulario" novalidate>
+    <ion-item class="ion-margin">
+      <ion-input type="text" labelPlacement="floating" formControlName="asunto">
+        <div slot="label">Asunto</div>
+      </ion-input>
+    </ion-item>
+    <ion-item class="ion-margin">
+      <ion-textarea labelPlacement="floating" formControlName="descripcion" [autoGrow]="true">
+        <div slot="label">Descripción</div>
+      </ion-textarea>
+    </ion-item>
+    <ion-list class="ion-margin ion-padding">
+      <ion-label>Fecha de la incidencia</ion-label>
+      <ion-datetime display-format="DD.MM.YYYY HH:mm" formControlName="fecha" class="ion-margin-top"></ion-datetime>
+    </ion-list>
+    <ion-item class="ion-margin">
+      <ion-textarea labelPlacement="floating" formControlName="impacto" [autoGrow]="true">
+        <div slot="label">Impacto</div>
+      </ion-textarea>
+    </ion-item>
+    <ion-item class="ion-margin">
+      <ion-textarea labelPlacement="floating" formControlName="riesgos" [autoGrow]="true">
+        <div slot="label">Riesgos</div>
+      </ion-textarea>
+    </ion-item>
+    <ion-item class="ion-margin">
+      <ion-select placeholder="Seleccione un aprioridad" labelPlaceholder="floating" formControlName="prioridad" interface="popover">
+        <div slot="label">Prioridad</div>
+        <ion-select-option *ngFor="let prioridades of listaPrioridades" value="{{prioridades.id}}">{{prioridades.prioridad}}</ion-select-option>
+      </ion-select>
+    </ion-item>
+    <ion-button expand="block" class="ion-margin" [disabled]="!formulario.valid" (click)="guardar()">
+      Guardar
+    </ion-button>
+    <ion-button expand="block" class="ion-margin" color="secondary" (click)="cancelar()">
+      Cancelar
+    </ion-button>
+  </form>
+</div>
 </ion-content>
