--- a/src/app/pages/incidences/incidents-list/incidents-list.page.html
+++ b/src/app/pages/incidences/incidents-list/incidents-list.page.html
@@ -1,13 +1,51 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>incidents-list</ion-title>
+    <ion-buttons slot="start">
+      <ion-button color="primary" (click)="regresar()">
+        <ion-icon name="chevron-back-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-title class="ion-no-padding">Incidencias</ion-title>
+    <ion-buttons slot="end">
+      <ion-button color="primary" (click)="nuevaIncidencia()">
+        <ion-icon name="add"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="false">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">incidents-list</ion-title>
+      <ion-title size="large">Incidencias</ion-title>
     </ion-toolbar>
   </ion-header>
+  <div>
+    <ion-list>
+      <ion-item>
+        <ion-select aria-label="Incidencias" interface="popover" placeholder="Seleccionar" [(ngModel)]="estado" value="estado" (ionChange)="cargarIncidencias()">
+          <div slot="label">Estado de incidencias: </div>
+          <ion-select-option *ngFor="let estados of listaEstados" value="{{estados.id}}">{{estados.nombre}}</ion-select-option>
+        </ion-select>
+      </ion-item>
+    </ion-list>
+    <ion-list>
+      <ion-item-sliding *ngFor="let incidencias of listaIncidencias" [disabled]="deshabilitarSliding">
+        <ion-item>
+          <ion-label>{{incidencias.asunto}}</ion-label>
+        </ion-item>
+        <ion-item-options side="start">
+          <ion-item-option color="primary">
+            <ion-icon name="document-text-outline"></ion-icon>
+          </ion-item-option>
+          <ion-item-option color="medium" (click)="editarIncidencia(incidencias.id)">
+            <ion-icon name="create-outline"></ion-icon>
+          </ion-item-option>
+          <ion-item-option color="danger">
+            <ion-icon name="close-outline"></ion-icon>
+          </ion-item-option>
+        </ion-item-options>
+      </ion-item-sliding>
+    </ion-list>
+  </div>
 </ion-content>
