--- a/src/app/pages/incidences/incidents-list/incidents-list.page.html
+++ b/src/app/pages/incidences/incidents-list/incidents-list.page.html
@@ -35,14 +35,17 @@
           <ion-label>{{incidencias.asunto}}</ion-label>
         </ion-item>
         <ion-item-options side="start">
-          <ion-item-option color="primary">
+          <ion-item-option color="primary" (click)="verIncidencia(incidencias.id)">
             <ion-icon name="document-text-outline"></ion-icon>
           </ion-item-option>
-          <ion-item-option color="medium" (click)="editarIncidencia(incidencias.id)">
+          <ion-item-option color="medium" (click)="editarIncidencia(incidencias.id)" [ngStyle]="{'display' : !ocultarEditar ? 'block': 'none'}">
             <ion-icon name="create-outline"></ion-icon>
           </ion-item-option>
-          <ion-item-option color="danger">
+          <ion-item-option color="danger" (click)="deshabilitarIncidencia(incidencias.id)" [ngStyle]="{'display' : !ocultarDeshabilitar ? 'block': 'none'}">
             <ion-icon name="close-outline"></ion-icon>
+          </ion-item-option>
+          <ion-item-option color="success" (click)="habilitarIncidencia(incidencias.id)" [ngStyle]="{'display' : !ocultarHabilitar ? 'block': 'none'}">
+            <ion-icon name="checkmark-outline"></ion-icon>
           </ion-item-option>
         </ion-item-options>
       </ion-item-sliding>
