Reconstrucción de información de incidencia

--- a/src/app/pages/incidences/incidents-form/incidents-form.page.html
+++ b/src/app/pages/incidences/incidents-form/incidents-form.page.html
@@ -94,7 +94,7 @@
     <ion-button expand="block" class="ion-margin" [disabled]="!formulario.valid" (click)="guardar()">
       Guardar
     </ion-button>
-    <ion-button expand="block" class="ion-margin" color="secondary" (click)="cancelar()">
+    <ion-button expand="block" class="ion-margin" color="medium" (click)="cancelar()">
       Cancelar
     </ion-button>
   </form>
