Avance en incidences-info, creación de users-form, users-list, users-selector.

--- a/src/app/pages/auth/reset-password/reset-password.page.html
+++ b/src/app/pages/auth/reset-password/reset-password.page.html
@@ -1,13 +1,23 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>reset-password</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">reset-password</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-card>
+    <ion-card-header class="ion-text-center">
+      <ion-card-title class="ion-margin-vertical">Resetear Contraseña</ion-card-title>
+      <ion-card-subtitle>Por favor ingresa tu correo electrónico y enviaremos un correo electrónico con la información necesaria para continuar el proceso.</ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>
+      <form [formGroup]="formulario" novalidate>
+        <ion-item>
+          <ion-input type="text" labelPlacement="floating" formControlName="correo" required>
+            <div slot="label">Correo electrónico</div>
+          </ion-input>
+        </ion-item>
+        <ion-button (click)="resetearContrasena()" expand="block" [disabled]="!formulario.valid" *ngIf="formulario" class="ion-margin-vertical">
+          Resetear
+        </ion-button>
+        <ion-button (click)="cancelar()" expand="block" color="medium">
+          Cancelar
+        </ion-button>
+      </form>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
