--- a/src/app/pages/auth/sign-in/sign-in.page.html
+++ b/src/app/pages/auth/sign-in/sign-in.page.html
@@ -3,7 +3,7 @@
     <ion-card>
       <ion-card-header>
         <ion-card-title>Iniciar sesión</ion-card-title>
-        <ion-card-subtitle>Iniciar sesión</ion-card-subtitle>
+        <ion-card-subtitle>Por favor ingresa tus credenciales para iniciar sesión.</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
         <form [formGroup]="sesionForm" novalidate>
