Avance en selector de usuarios.

--- a/src/app/pages/incidences/incidents-info/incidents-info.page.html
+++ b/src/app/pages/incidences/incidents-info/incidents-info.page.html
@@ -58,7 +58,7 @@
       <ion-list-header>
         <ion-note>Usuarios Asignados</ion-note>
         <div style="flex-grow: 1;"></div> <!-- Esto es un divisor flexible -->
-        <ion-button  fill="solid" class="ion-padding-horizontal">
+        <ion-button  fill="solid" class="ion-padding-horizontal" (click)="asignar()">
           <ion-icon class="ion-margin-horizontal" slot="start" name="add"></ion-icon>
         </ion-button>
       </ion-list-header>
