--- a/src/app/pages/incidences/incidents-info/incidents-info.page.html
+++ b/src/app/pages/incidences/incidents-info/incidents-info.page.html
@@ -71,7 +71,7 @@
       <ion-list-header class="ion-align-items-center">
         <ion-note>Actividades de la Incidencia</ion-note>
         <div style="flex-grow: 1;"></div> <!-- Esto es un divisor flexible -->
-        <ion-button fill="solid" class="ion-padding-horizontal">
+        <ion-button fill="solid" class="ion-padding-horizontal" (click)="crearActividad()">
           <ion-icon class="ion-margin-horizontal" name="add"></ion-icon>
         </ion-button>
       </ion-list-header>
