--- a/src/app/pages/users/users-list/users-list.page.html
+++ b/src/app/pages/users/users-list/users-list.page.html
@@ -1,13 +1,27 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>users-list</ion-title>
+    <ion-buttons slot="start">
+      <ion-button (click)="salir()" color="primary">
+        <ion-icon slot="start" name="chevron-back-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-title>{{titulo}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">users-list</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-item>
+    <ion-searchbar placeholder="buscar" inputmode="text" type="text" (ionChange)="busqueda()" [debounce]="500" s></ion-searchbar>
+  </ion-item>
+  <ion-list *ngIf="listaUsuarios">
+    <ion-item-sliding *ngFor="let usuarios of listaUsuarios">
+      <ion-item *ngIf="usuarios.correo !== miCorreo">
+        <ion-label>{{usuarios.nombres}} {{usuarios.apellidos}}</ion-label>
+      </ion-item>
+      <ion-item-options side="start">
+        <ion-item-option >Favorite</ion-item-option>
+        <ion-item-option color="primary" >Share</ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
 </ion-content>
