--- a/src/app/pages/incidences/incidents-list/incidents-list.page.html
+++ b/src/app/pages/incidences/incidents-list/incidents-list.page.html
@@ -15,40 +15,33 @@
 </ion-header>
 
 <ion-content [fullscreen]="false">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Incidencias</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <div>
-    <ion-list>
+  <ion-list>
+    <ion-item>
+      <ion-select interface="popover" placeholder="Seleccionar" [(ngModel)]="estado" (ionChange)="cargarIncidencias()">
+        <div slot="label">Estado de incidencias: </div>
+        <ion-select-option *ngFor="let estados of listaEstados" [value]="estados.id">{{estados.nombre}}</ion-select-option>
+      </ion-select>
+    </ion-item>
+  </ion-list>
+  <ion-list>
+    <ion-item-sliding *ngFor="let incidencias of listaIncidencias" [disabled]="deshabilitarSliding">
       <ion-item>
-        <ion-select aria-label="Incidencias" interface="popover" placeholder="Seleccionar" [(ngModel)]="estado" value="estado" (ionChange)="cargarIncidencias()">
-          <div slot="label">Estado de incidencias: </div>
-          <ion-select-option *ngFor="let estados of listaEstados" value="{{estados.id}}">{{estados.nombre}}</ion-select-option>
-        </ion-select>
+        <ion-label>{{incidencias.asunto}}</ion-label>
       </ion-item>
-    </ion-list>
-    <ion-list>
-      <ion-item-sliding *ngFor="let incidencias of listaIncidencias" [disabled]="deshabilitarSliding">
-        <ion-item>
-          <ion-label>{{incidencias.asunto}}</ion-label>
-        </ion-item>
-        <ion-item-options side="start">
-          <ion-item-option color="primary" (click)="verIncidencia(incidencias.id)">
-            <ion-icon name="document-text-outline"></ion-icon>
-          </ion-item-option>
-          <ion-item-option color="medium" (click)="editarIncidencia(incidencias.id)" [ngStyle]="{'display' : !ocultarEditar ? 'block': 'none'}">
-            <ion-icon name="create-outline"></ion-icon>
-          </ion-item-option>
-          <ion-item-option color="danger" (click)="deshabilitarIncidencia(incidencias.id)" [ngStyle]="{'display' : !ocultarDeshabilitar ? 'block': 'none'}">
-            <ion-icon name="close-outline"></ion-icon>
-          </ion-item-option>
-          <ion-item-option color="success" (click)="habilitarIncidencia(incidencias.id)" [ngStyle]="{'display' : !ocultarHabilitar ? 'block': 'none'}">
-            <ion-icon name="checkmark-outline"></ion-icon>
-          </ion-item-option>
-        </ion-item-options>
-      </ion-item-sliding>
-    </ion-list>
-  </div>
+      <ion-item-options side="start">
+        <ion-item-option color="primary" (click)="verIncidencia(incidencias.id)">
+          <ion-icon name="document-text-outline"></ion-icon>
+        </ion-item-option>
+        <ion-item-option color="medium" (click)="editarIncidencia(incidencias.id)" [ngStyle]="{'display' : !ocultarEditar ? 'block': 'none'}">
+          <ion-icon name="create-outline"></ion-icon>
+        </ion-item-option>
+        <ion-item-option color="danger" (click)="deshabilitarIncidencia(incidencias.id)" [ngStyle]="{'display' : !ocultarDeshabilitar ? 'block': 'none'}">
+          <ion-icon name="close-outline"></ion-icon>
+        </ion-item-option>
+        <ion-item-option color="success" (click)="habilitarIncidencia(incidencias.id)" [ngStyle]="{'display' : !ocultarHabilitar ? 'block': 'none'}">
+          <ion-icon name="checkmark-outline"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
 </ion-content>
