--- a/src/app/pages/users/users-list/users-list.page.html
+++ b/src/app/pages/users/users-list/users-list.page.html
@@ -1,26 +1,47 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-button (click)="salir()" color="primary">
         <ion-icon slot="start" name="chevron-back-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title>{{titulo}}</ion-title>
+    <ion-title class="ion-no-padding">{{titulo}}</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="nuevoUsuario()" color="primary">
+        <ion-icon slot="end" name="add"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+  <ion-toolbar>
+    <ion-searchbar placeholder="Buscar usuario" inputmode="text" type="text" (ionChange)="buscar($event)" [debounce]="500"></ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-item>
-    <ion-searchbar placeholder="buscar" inputmode="text" type="text" (ionChange)="busqueda()" [debounce]="500" s></ion-searchbar>
+  <ion-item lines="none">
+    <ion-select [(ngModel)]="estado"  placeholder="Seleccione uno" (ionChange)="cargarUsuarios()" interface="popover" >
+      <div slot="label">Estado de los usuarios</div>
+      <ion-select-option *ngFor="let estados of listaEstados" [value]='estados.id'>{{estados.nombre}}</ion-select-option>
+    </ion-select>
   </ion-item>
-  <ion-list *ngIf="listaUsuarios">
-    <ion-item-sliding *ngFor="let usuarios of listaUsuarios">
-      <ion-item *ngIf="usuarios.correo !== miCorreo">
+  <ion-list class="ion-margin-vertical">
+    <ion-item-sliding *ngFor="let usuarios of listaUsuarios" [disabled]="usuarios.correo == null">
+      <ion-item lines="none">
         <ion-label>{{usuarios.nombres}} {{usuarios.apellidos}}</ion-label>
       </ion-item>
       <ion-item-options side="start">
-        <ion-item-option >Favorite</ion-item-option>
-        <ion-item-option color="primary" >Share</ion-item-option>
+        <ion-item-option (click)="infoUsuario(usuarios.correo)" color="primary">
+          <ion-icon name="id-card-outline"></ion-icon>
+        </ion-item-option>
+        <ion-item-option (click)="editarUsuario(usuarios.correo)" color="medium"  [ngStyle]="{'display' : !ocultarEditar ? 'block': 'none'}">
+          <ion-icon name="create-outline"></ion-icon>
+        </ion-item-option>
+        <ion-item-option color="danger" (click)="deshabilitarUsuario(usuarios.correo)" [ngStyle]="{'display' : !ocultarDeshabilitar ? 'block': 'none'}">
+          <ion-icon name="close-outline"></ion-icon>
+        </ion-item-option>
+        <ion-item-option color="success" (click)="habilitarUsuario(usuarios.correo)" [ngStyle]="{'display' : !ocultarHabilitar ? 'block': 'none'}">
+          <ion-icon name="checkmark-outline"></ion-icon>
+        </ion-item-option>
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
