Avance de información de usuario, lista de usuarios.

--- a/src/app/pages/incidences/incidents-list/incidents-list.page.html
+++ b/src/app/pages/incidences/incidents-list/incidents-list.page.html
@@ -14,7 +14,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="false">
+<ion-content [fullscreen]="true">
   <ion-list>
     <ion-item>
       <ion-select interface="popover" placeholder="Seleccionar" [(ngModel)]="estado" (ionChange)="cargarIncidencias()">
