--- a/src/app/pages/users/users-selector/users-selector.page.html
+++ b/src/app/pages/users/users-selector/users-selector.page.html
@@ -32,7 +32,7 @@
         <div slot="label">Observaciones</div>
       </ion-textarea>
     </ion-item>
-    <ion-button (click)="asignar()" expand="block" [disabled]="!formulario.valid">
+    <ion-button (click)="asignar()" expand="block" [disabled]="!formulario.valid" class="ion-margin">
       Asignar
     </ion-button>
   </form>
