--- a/src/app/pages/start/main-start/main-start.page.html
+++ b/src/app/pages/start/main-start/main-start.page.html
@@ -1,4 +1,4 @@
-<ion-menu side="end" contentId="main-content">
+<ion-menu side="end" contentId="main-content" *ngIf="chartOptions">
   <ion-header>
     <ion-toolbar>
       <ion-title>Menu</ion-title>
@@ -29,7 +29,7 @@
     </div>
   </ion-content>
 </ion-menu>
-<div class="ion-page" id="main-content">
+<div class="ion-page" id="main-content" *ngIf="chartOptions">
   <ion-header>
     <ion-toolbar>
       <ion-title class="ion-align-items-center">
@@ -39,5 +39,22 @@
       </ion-buttons>
     </ion-toolbar>
   </ion-header>
-  <ion-content class="ion-padding"> Tap the button in the toolbar to open the menu. </ion-content>
+  <ion-content class="ion-padding">
+    <ion-card color="light">
+      <ion-card-header>
+        <ion-card-title>Incidencias</ion-card-title>
+        <ion-card-subtitle>Acontinuación se muestran el porcentaje de incidencias registradas.</ion-card-subtitle>
+      </ion-card-header>
+      <ion-card-content class="ion-no-padding">
+        <div id="chart">
+          <apx-chart
+            [series]="chartOptions.series"
+            [chart]="chartOptions.chart"
+            [labels]="chartOptions.labels"
+            [responsive]="chartOptions.responsive"
+          ></apx-chart>
+        </div>
+      </ion-card-content>
+    </ion-card>
+  </ion-content>
 </div>
