Creación de menú de reportes

--- a/src/app/pages/reports/incidences-summary/incidences-summary.page.html
+++ b/src/app/pages/reports/incidences-summary/incidences-summary.page.html
@@ -13,7 +13,7 @@
   <ion-item class="ion-margin">
     <h3>{{incidencia.asunto}}</h3>
   </ion-item>
-  <ion-list>
+  <ion-list class="ion-margin">
     <ion-list-header>
       <ion-label>INFORME</ion-label>
     </ion-list-header>
@@ -22,8 +22,42 @@
     </ion-text>
   </ion-list>
   <ion-list>
-    <ion-list-header>
+    <ion-list-header class="ion-margin">
       <ion-label>RESUMEN</ion-label>
+    </ion-list-header>
+    <ion-note>Descripción</ion-note>
+    <ion-text>
+      <p>incidencia.descripcion</p>
+    </ion-text>
+    <ion-note>Impactor</ion-note>
+    <ion-text>
+      <p>incidencia.impacto</p>
+    </ion-text>
+    <ion-note>Riesgos</ion-note>
+    <ion-text>
+      <p>incidencia.riesgos</p>
+    </ion-text>
+  </ion-list>
+  <ion-list>
+    <ion-list-header class="ion-margin">
+      <ion-label>ASIGNACIONES Y ACTIVIDADES</ion-label>
+    </ion-list-header>
+    <ion-note>Descripción</ion-note>
+    <ion-text>
+      <p>incidencia.descripcion</p>
+    </ion-text>
+    <ion-note>Impactor</ion-note>
+    <ion-text>
+      <p>incidencia.impacto</p>
+    </ion-text>
+    <ion-note>Riesgos</ion-note>
+    <ion-text>
+      <p>incidencia.riesgos</p>
+    </ion-text>
+  </ion-list>
+  <ion-list>
+    <ion-list-header class="ion-margin">
+      <ion-label>DATOS DE INCIDENCIA</ion-label>
     </ion-list-header>
     <ion-note>Descripción</ion-note>
     <ion-text>
