--- a/src/app/pages/incidences/incidents-list/incidents-list.page.html
+++ b/src/app/pages/incidences/incidents-list/incidents-list.page.html
@@ -30,7 +30,7 @@
       </ion-item>
       <ion-item-options side="start">
         <ion-item-option color="primary" (click)="verIncidencia(incidencias.id)">
-          <ion-icon name="document-text-outline"></ion-icon>
+          <ion-icon name="list-outline"></ion-icon>
         </ion-item-option>
         <ion-item-option color="medium" (click)="editarIncidencia(incidencias.id)" [ngStyle]="{'display' : !ocultarEditar ? 'block': 'none'}">
           <ion-icon name="create-outline"></ion-icon>
