--- a/src/app/pages/reports/reports/reports.page.html
+++ b/src/app/pages/reports/reports/reports.page.html
@@ -1,13 +1,39 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>reports</ion-title>
+    <ion-buttons slot="start">
+      <ion-button (click)="salir()" color="primary">
+        <ion-icon slot="start" name="chevron-back-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-title class="ion-no-padding">Menú de Reportes</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">reports</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content [fullscreen]="true" [ngStyle]="{'display' : ocultarLista ? 'block': 'none'}">
+  <ion-button (click)="cargarIncidencias()" expand="block" class="ion-margin">
+    Reportes de Incidencias
+  </ion-button>
+</ion-content>
+
+<ion-content [fullscreen]="true" [ngStyle]="{'display' : !ocultarLista ? 'block': 'none'}" *ngIf="listaIncidencias">
+  <ion-item class="ion-margin">
+    <ion-select [(ngModel)]="estado" interface="popover" (ionChange)="cargarIncidencias()">
+      <div slot="label">Estado de Incidencias</div>
+      <ion-select-option *ngFor="let estados of listaEstados" [value]="estados.id">{{estados.nombre}}</ion-select-option>
+    </ion-select>
+  </ion-item>
+<ion-list class="ion-margin">
+  <ion-list-header>
+    <ion-label>Incidencias Encontradas</ion-label>
+      <ion-button (click)="cerrarIncidencias()">
+        <ion-icon slot="start" name="close-outline"></ion-icon>
+      </ion-button>
+    <ion-buttons slot="end">
+    </ion-buttons>
+  </ion-list-header>
+  <ion-item *ngFor="let incidencias of listaIncidencias" (click)="irReporteIncidencia(incidencias.id)" [disabled]="deshabilitarLista">
+    <ion-icon name="document-text-outline" color="primary" [ngStyle]="{'display' : !deshabilitarLista ? 'block': 'none'}"></ion-icon>
+    <ion-label>{{incidencias.asunto}}</ion-label>
+  </ion-item>
+</ion-list>
 </ion-content>
